[package]
name = "ctapcbor"
version = "0.1.0"
authors = ["Nicolas Stalder <n@stalder.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bitmatch = { version = "0.1.0" }
heapless = { version = "0.5.1", default-features = false, features = ["serde"] }
heapless-bytes = { git = "https://github.com/ycrypto/heapless-bytes", branch = "main" } #, features = ["cbor"] }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde_cbor = { version = "0.11.0", default-features = false }
serde-indexed = { git = "https://github.com/ycrypto/serde-indexed", branch = "main" }

[features]
use-std = []

# [patch."https://github.com/ycrypto/heapless-bytes"]
# heapless-bytes = { path = "../heapless-bytes" }
